# Telgram-bot

./: .aptfile  .dockerignore  .env  .gitignore  .nixpacks.toml  .railway.toml  Aptfile  Dockerfile  Procfile  RAILWAY.md  README.md  app.py  aptfile  build.sh  docker-compose.yml  frontend-goqr.html  guia_despliegue.md  install_dependencies.sh  push_git.bat  pyproject.toml  qr_bot.py  qr_scanner.py  railway.toml  render.yaml  requirements.txt  run_telegram_bot.py  setup.py  setup.sh  test_bot.py  uvicorn_config.py  whitelist.py
templates/: index.html
